# build-your-own-openclaw

./: .gitignore  GAP.md  PLAN.md  README.md  WORKFLOW.md
00-chat-loop/: README.md
01-tools/: README.md
02-skills/: README.md  pyproject.toml
03-persistence/: README.md
04-slash-commands/: README.md  pyproject.toml
04-slash-commands/src/cli/: __init__.py  chat.py
04-slash-commands/src/core/: agent.py  agent_loader.py  history.py  session_state.py  skill_loader.py
04-slash-commands/src/core/commands/: __init__.py  base.py  handlers.py  registry.py
04-slash-commands/src/mybot/cli/: chat.py
04-slash-commands/src/mybot/core/: agent.py
04-slash-commands/src/mybot/core/commands/: handlers.py  registry.py
04-slash-commands/src/mybot/tools/: skill_tool.py
04-slash-commands/src/provider/llm/: base.py
04-slash-commands/src/tools/: base.py  registry.py
04-slash-commands/src/utils/: config.py  def_loader.py
05-compaction/: README.md  pyproject.toml
05-compaction/src/mybot/cli/: main.py
05-compaction/src/mybot/core/: agent.py
05-compaction/src/mybot/core/commands/: base.py  handlers.py  registry.py
06-web-tools/: README.md  pyproject.toml
07-event-driven/: README.md
08-config-hot-reload/: README.md  pyproject.toml
08-config-hot-reload/src/mybot/cli/: chat.py  main.py
08-config-hot-reload/src/mybot/core/: agent.py  context.py  context_guard.py  eventbus.py  events.py  history.py  session_state.py
08-config-hot-reload/src/mybot/core/commands/: __init__.py  handlers.py  registry.py
08-config-hot-reload/src/mybot/provider/web_search/: brave.py
08-config-hot-reload/src/mybot/server/: __init__.py  agent_worker.py
08-config-hot-reload/src/mybot/tools/: registry.py  webread_tool.py
08-config-hot-reload/src/mybot/utils/: config.py
09-channels/: README.md
10-websocket/: README.md  pyproject.toml
10-websocket/src/mybot/channel/: base.py
10-websocket/src/mybot/core/: __init__.py  agent.py  agent_loader.py  context.py  context_guard.py
10-websocket/src/mybot/core/commands/: registry.py
10-websocket/src/mybot/provider/llm/: base.py
10-websocket/src/mybot/server/: __init__.py  app.py  channel_worker.py  server.py  websocket_worker.py
10-websocket/src/mybot/utils/: config.py
11-multi-agent-routing/: README.md
(+121 files in other folders)
